Improve gRPC java client (#1140)